syntax = "proto3";

package protos;

option go_package = "github.com/seoyhaein/ConnectService/protos";

message FileUploadRequest {
  string file_name = 1;
  bytes file_content = 2;
}

message FileUploadResponse {
  bool success = 1;
  string message = 2;
}

service FileTransferService {
  rpc UploadFile (FileUploadRequest) returns (FileUploadResponse);
}